@@ -60,6 +60,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_QTL.rpt">QTL Markers added to MGI since March 2002 with no MP annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_SharedSynonyms.rpt">Markers with Shared Synonyms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_TranscriptNoSP.sql.rpt">MGI genes that have Transcript Sequences but no SwissProt association</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_New_QTLS.rpt">QTL Markers since the previous week</A>
 </OL>
 
 <A NAME="alleles"><B>Alleles</B> </A>
